--- a/style.css
+++ b/style.css
@@ -2,26 +2,21 @@
 
 :root{
   --main-color:#537fff;
-  --primary-color:var(#4ea5e0);
-  --secondary-color:var(#7a3adf);
-  --terciary-color:var(#d500ff);
+  --primary-color:#4ea5e0;
+  --secondary-color:#793adf;
+  --terciary-color:#d500ff;
+  --contrast-color:#6eed1d;
   --border-radius:.2rem;
 }
 
 
-/**Estilos generales**/
+/* -----COMMON------ */
 
 *{
   margin:0;
   padding: 0;
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
-}
-html{
-  scroll-behavior: smooth;
-}
-body{
-  background: linear-gradient(to left bottom , #4ea5e0 0, #7a3adf 50%,#d500ff 100%);
 }
 
 p{
@@ -46,110 +41,312 @@ h3{
   font-size: 2em;
 }
 
-/**Header*/
+/* -------HEADER------ */
 
-header, section{
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 80px 100px;
-  color: #fff;
-}
-.container{
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-.main-title{
-  margin-bottom: 50px;
-}
-.content{
-  position: relative;
-  width: 1150px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+header{
+ min-height: 100vh;
+ width: 100%;
+ background-image: linear-gradient(rgba(4,9,30,0.7), rgba(4,9,30,0.5)), url(./images/github-community.png);
+ background-position: center;
+ background-size: cover;
+ position: relative;
 }
 
-.content .image{
+nav{
+display: flex;
+padding: 2% 6%;
+justify-content: space-between;
+align-items: center;
+}
+nav a{
+  color: var(--contrast-color);
+}
+nav img{
+  width: 100px;
+  border-radius: 50%;
+}
+
+.nav-links{
+  flex: 1;
+  text-align: right;
+}
+.nav-links ul li{
+  display: inline-block;
+  padding: 8px 12px;
   position: relative;
-  width: 800px;
-  height: 400px;
+}
+.nav-links ul li a{
+  color: var(--contrast-color);
+  font-size:13px;
+}
+.nav-links ul li::after{
+  content: '';
+  width: 0%;
+  height: 2px;
+  background: var(--terciary-color);
+  display: block;
+  margin: auto;
+  transition: 0.5s;
+}
+.nav-links ul li:hover::after{
+  width: 100%;
+}
+nav .fa{
+  display: none;
+}
+.text-box{
+  width: 90%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: azure;
+  text-align: center;
+}
+.text-box h1{
+  font-size: 62px;
+}
+.text-box p{
+  margin: 10px 0 40px;
+  font-size: 14px;
+  white-space: pre;
+}
+.hero-btn{
+  display: inline-block;
+  color: var(--contrast-color);
+  border: 1px solid var(--contrast-color);
+  padding: 12px 34px;
+  font-size: 13px;
+  background: transparent;
+  position: relative;
+  cursor: pointer;
+}
+
+.hero-btn:hover{
+border: 1px solid var(--terciary-color);
+background: var(--terciary-color);
+transition: 1s;
+color: white;
+}
+
+@media(max-width: 700px){
+  .text-box h1{
+    font-size: 20px;
+  }
+  .nav-links ul li{
+    display: block;
+  }
+  .nav-links{
+    position: absolute;
+    background: var(--secondary-color);
+    height: 100vh;
+    width: 200px;
+    top: 0;
+    right:0px;
+    text-align: left;
+    z-index: 2;
+    transition: 1s;
+  }
+
+  nav .fa {
+    display: block;
+    color: var(--contrast-color);
+    margin: 10px;
+    font-size: 22px;
+    cursor: pointer;
+  }
+  .nav-links ul{
+    padding: 30px;
+  }
+}
+
+
+/* ------MAIN------ */
+.wedo, .about{
+  width: 80%;
+  margin: auto ;
+  text-align: center;
+  padding-top:50px ;
+}
+h1{
+  font-size: 36px;
+  font-weight: 600;
+}
+p{
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 22px;
+  padding: 10px;
+}
+.row{
+  margin-top: 5%;
+  display: flex;
+  justify-content: space-between;
+}
+.wedo-col{
+  flex-basis: 31%;
+  background-color: var(--primary-color);
+  border-radius: 10px;
+  margin-bottom: 5%;
+  padding: 20px 12px;
+  transition: 0.5s;
+}
+
+h3{
+  text-align: center;
+  font-weight: 600;
+  margin: 10px 0;
+}
+
+.wedo-col:hover{
+  box-shadow:0 0 20px 0 var(--main-color);
+}
+
+@media(max-width:700px){
+  .row{
+    flex-direction: column;
+  }
+}
+
+.about .row{
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+.about-col{
+  flex-basis: 31%;
+  border-radius: 10px;
+  margin-bottom: 30px;
+  position: relative;
   overflow: hidden;
 }
 
-.content .image img{
-  z-index:111;
+.about-col img{
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+.about-col h3{
+  text-transform: uppercase;
+}
+
+.layer{
+  background:transparent;
+  height: 100%;
+  width: 100%;
   position: absolute;
   top: 0;
   left: 0;
+  transition: 0.5s;
+}
+.layer:hover{
+  background: hsl(263, 72%, 55%, 0.7);
+}
+.layer h3{
   width: 100%;
-  height: 100%;
-  object-fit: cover;
+  font-weight: 500;
+  font-size: 26px;
+  bottom: 0;
+  left: 50%;
+  transform:translateX(-50%);
+  position: absolute;
+  opacity: 0;
+  transition: 0.5s;
+}
+.layer p {
+  width: 100%;
+  font-size: 15px;
+  font-weight: 500;
+  text-align: left;
+  top: 0;
+  position: absolute;
+  opacity: 0;
+  transition: 0.5s;
+}
+.layer:hover p{
+  top:60%;
+  opacity: 1;
+}
+.layer:hover h3{
+  bottom: 49%;
+  opacity: 1;
+}
+
+.events{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  margin: auto;
+  align-items: center;
+  padding-top:  50px ;
+}
+
+.wrapper{
+  margin-top:  10px 10px;
+  height: 100vh;
+  width: 100%;
+  display: grid;
+  place-content: center;
+}
+.slide{
+  width: 100vw;
+  max-width: 1000px;
+  height: 720px;
+  overflow: hidden;
   border-radius: 10px;
 }
-
-.content .text-box{
-  z-index: 222;
-  background: var(--main-color  0.2);
-  backdrop-filter: blur(20px);
-  padding: 40px;
-  max-width: 400px;
-  border-radius: 10px;
-  border: 1px solid var(--main-color) ;
-  transform: translate(-60px, 150px);
+.slide ul{
+  display: flex;
+  padding: 0;
+  width: 400%;
+  animation: slide 15s infinite cubic-bezier(0.55, 0.48, 0.37, 0.92);
+}
+.slide li{
+  width: 100%;
+}
+li img{
+  width:100%;
+}
+.footer{
+  width: 100%;
+  text-align: center;
+  padding: 30px 0;
+}
+.footer h4{
+  margin-top: 20px;
+  margin-bottom: 25px;
+  font-weight: 600;
 }
 
-.content .text-box h3{
-  margin-bottom: 10px;
+.icons .fa-brands{
+  color: var(--secondary-color);
+  margin: 0 13px;
+  padding: 18px 0;
+  cursor: pointer;
 }
-
-.media-icons{
-  margin-top: 100px;
+@keyframes slide{
+  0%{
+    margin-left: 0;
+  }
+  20%{
+    margin-left: 0;
+  }
+  25%{
+    margin-left: -100%;
+  }
+  45%{
+    margin-left: -100%;
+  }
+  50%{
+    margin-left: -200%;
+  }
+  70%{
+    margin-left: -200%;
+  }
+  75%{
+    margin-left: -300%;
+  }
+  100%{
+    margin-left: -300%;
+  }
 }
-
-.media-icons a{
-  color: #fff;
-  font-size: 2em;
-  margin: 60px;
-}
-
-/**About us**/
-
-.section-title{
-  margin-top: 80px;
-}
-
-.info-title{
-  margin-bottom: 10px;
-}
-
-.info{
- width: 700px;
-  margin-left: 50px;
-}
-
-.media-info{
-  width: 400px;
-  margin-left: 50px;
-}
-
-.media-info li a{
-  font-family: "Kalam", sans-serif;
-  font-size: 1.4em;
-  color: #fff;
-}
-.media-info li:not(:last-child){
-  margin-bottom: 50px;
-}
-.media-info li:nth-child(1), .media-info li:nth-child(4){
-  padding-left: 60px;
-}
-
-.contact{
-  margin-bottom: 100px;
-}
-
