--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ p{
 }
 a{
   text-decoration: none;
+  color: inherit;
 }
 ul,li{
   list-style: none;
@@ -39,6 +40,9 @@ h2{
 }
 h3{
   font-size: 2em;
+}
+main, footer{
+  background-color: whitesmoke;
 }
 
 /* -------HEADER------ */
@@ -158,7 +162,7 @@ color: white;
   .nav-links ul{
     padding: 30px;
   }
-
+}
 
 
 /* ------MAIN------ */
@@ -282,7 +286,7 @@ h3{
 }
 
 .wrapper{
-  margin-top:  10px 10px;
+  margin-top:  10px;
   height: 100vh;
   width: 100%;
   display: grid;
@@ -307,7 +311,11 @@ h3{
 li img{
   width:100%;
 }
-
+@media(max-width:700px){
+  .wrapper{
+    margin-top: 55px;
+  }
+}
 .footer{
   width: 100%;
   text-align: center;
@@ -318,12 +326,16 @@ li img{
   margin-bottom: 25px;
   font-weight: 600;
 }
-
-.icons .fa-brands{
+.icons a{
   color: var(--secondary-color);
+}
+.icons .fa-brands .fa-regular{
   margin: 0 13px;
   padding: 18px 0;
   cursor: pointer;
+}
+footer small{
+  margin-top: 5px;
 }
 @keyframes slide{
   0%{
